--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -78,7 +78,7 @@ This file must contain all the SNPs used for the GWAS in a very simple tab-delim
   * column 1: the chromosome
   * column 2: the position
 
-*NOTE:* Gowinda ignores all additional columns after column 2, thus it is for example also possible to provide a pileup file  as shown in the followinge example
+Gowinda ignores all additional columns after column 2, thus it is for example also possible to provide a mpileup file as shown in the followinge example
 {{{
 2R	2299	N	4	TTT^FT	AAAA	4	TTT^FT	AAAA
 2R	2300	N	5	AAAA^FA	AAAAA	5	AAAA^FA	AAAAA
@@ -86,6 +86,20 @@ This file must contain all the SNPs used for the GWAS in a very simple tab-delim
 2R	2302	N	7	TTTTTT^FT	AAAAAAA	7	TTTTTT^FT	AAAAAAA
 2R	2303	N	8	TTTTTTT^FT	AAAAAAAA	8	TTTTTTT^FT	AAAAAAAA
 }}}
+
+Gowinda also ignores entries starting with a '#' thus a .vcf file (http://vcftools.sourceforge.net/specs.html) may also be provided as shown in the following example:
+{{{
+
+##fileformat=VCFv4.0
+##fileDate=20090805
+##...
+##...
+#CHROM POS     ID        REF ALT    QUAL FILTER INFO                              FORMAT      NA00001        NA00002        NA00003
+20     14370   rs6054257 G      A       29   PASS   NS=3;DP=14;AF=0.5;DB;H2           GT:GQ:DP:HQ 0|0:48:1:51,51 1|0:48:8:51,51 1/1:43:5:.,.
+20     17330   .         T      A       3    q10    NS=3;DP=11;AF=0.017               GT:GQ:DP:HQ 0|0:49:3:58,50 0|1:3:5:65,3   0/0:41:3
+20     1110696 rs6040355 A      G,T     67   PASS   NS=2;DP=10;AF=0.333,0.667;AA=T;DB GT:GQ:DP:HQ 1|2:21:6:23,27 2|1:2:0:18,2   2/2:35:4
+}}} 
+
 
 == Candidate SNP file == 
 the same applies as for the total SNP file, except that the candidate SNPs must be a subset of the total SNPs.
