--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -3,13 +3,15 @@
 <wiki:toc max_depth="2"/>
 
 = Introduction =
-The following section provides a quick and fast introduction into the analysis of GO term enrichment with Gowinda. For the sake of this tutorial we provide a small artificial data set from _Drosophila melanogaster_ chromosome 2R. In these sample data we identified 348.701 SNPs and a GWAS-like study showed that 279 of those are associated with the trait of interest, lets say wing length. Furthermore the dataset contains an annotation of _D. melanogaster_ from !FlyBase and the GO associations from !FuncAssociate2. In the following section we demonstrate how to test, whether our set of candidate SNPs shows a significant enrichment for any GO terms. 
+The following section provides a quick and fast introduction into the analysis of gene set enrichment with Gowinda. For the sake of this tutorial we provide a small artificial data set from _Drosophila melanogaster_ chromosome 2R. In these sample data we identified 348.701 SNPs and a GWAS-like study showed that 279 of those are associated with the trait of interest, lets say body weight. Furthermore the dataset contains an annotation of _D. melanogaster_ from !FlyBase and the GO associations from !FuncAssociate2. In the following section we demonstrate how to test, whether our set of candidate SNPs shows a significant enrichment for any GO terms. 
 
 
 = Data =
+
 == Tutorial Gowinda ==
+
 The following sample data set contains SNPs, annotation and the GO associations for _D.melanogaster_ chromosome arm 2R. 
-First obtain the sample data for the Walkthrough: http://gowinda.googlecode.com/files/data_gowinda_tutorial.zip
+First, download the sample data for the Walkthrough: http://gowinda.googlecode.com/files/data_gowinda_tutorial.zip
 
 After unzipping the archive you should have the following files:
   * annotation.gtf: Annotation of the genome in the .gtf file format
@@ -21,16 +23,17 @@ After unzipping the archive you should have the following files:
 
 = Tutorial Gowinda =
 
-*NOTE:* Please follow the examples in the given order
+*NOTE: Please follow the examples in the given order*
 
 == Example 1: Basic analysis ==
 
-First we test whether the candidate SNPs show any enrichment for any GO category when counting every gene only once (`--mode gene`). Furthermore we want a SNP to be associated with a gene if the SNP position is within one of the exons or introns of the gene (`--gene-definition gene`). Furthermore to speed up the tutorial we use 8 threads for the simulations and only perform 100.000 simulations.
+First, let's test whether the candidate SNPs show any enrichment for any GO category when counting every gene only once (`--mode gene`). Furthermore we want a SNP to be associated with a gene if the SNP is overlapping with exons  or introns (`--gene-definition gene`). To speed up the tutorial let's use 8 threads for the simulations and perform 100.000 simulations.
+
 {{{
 java -Xmx4g -jar <path-to-gowinda>/Gowinda.jar --snp-file total_snps.txt --candidate-snp-file cand_snps.txt --gene-set-file goassociations_cg.txt --annotation-file annotation.gtf --simulations 100000 --min-significance 1 --gene-definition gene --threads 8 --output-file results_gene_gene.txt --mode gene --min-genes 1
 }}}
 
-After approximately 1 minute the results should be  available:
+After approximately ~1-2 minutes the results should be  available:
 {{{
 GO:0045155      0.050   2       0.0004800000    0.1648850000    2       2       2       electron transporter, transferring electrons from CoQH2-cytochrome c reductase compl
 ex and cytochrome c oxidase complex activity        cg13263,cg17903
@@ -42,16 +45,17 @@ GO:0005759      0.348   3       0.0031100000    0.3813620000    3       9       
 Please see the manual for a detailed description of the output: http://code.google.com/p/gowinda/wiki/Manual
 
 
-However, in this example with an FDR <0.05 no GO categories show a significant enrichment.
+However, in this example, with an FDR <0.05, no GO categories show a significant enrichment.
 
 == Example 2: Including regulatory regions ==
-In the previous analysis only SNPs within exons or introns were associated with a gene. For the next analysis we additionally want to include 2000 bp upstream and 2000 bp downstream of a gene (`--gene-definition updownstream2000`) into the analysis in order to account for regulatory regions.
+
+In the previous analysis only SNPs overlapping with exons or introns were associated with a gene. In order to account for regulatory regions, let's also include 2000 bp upstream and 2000 bp downstream of a gene (`--gene-definition updownstream2000`), for the next analysis.
 
 {{{
 java -Xmx4g -jar <path-to-gowinda>/Gowinda.jar --snp-file total_snps.txt --candidate-snp-file cand_snps.txt --gene-set-file goassociations_cg.txt --annotation-file annotation.gtf --simulations 100000 --min-significance 1 --gene-definition updownstream2000 --threads 8 --output-file results_gene_2000ud.txt --mode gene --min-genes 1
 }}} 
 
-Following an example of the results, again with an FDR <0.05 no significantly enriched GO categories were found.
+Following an example of the results.  Again, no significantly enriched GO categories were found with an FDR <0.05. 
 {{{
 GO:0005516      1.019   4       0.0027100000    0.8419150000    4       4       29      calmodulin binding      cg5125,cg8475,cg14472,cg6713
 GO:0016831      0.301   3       0.0027100000    0.8419150000    3       4       25      carboxy-lyase activity  cg5029,cg7811,cg10501
@@ -61,7 +65,7 @@ GO:0007349      3.040   8       0.0048600000    0.8419150000    8       24      
 }}}
 
 == Example 3: high resolution GO term enrichment ==
-As we are getting quite desperate now and we know that linkage disequilibrium is decaying quite rapidly in our organism we want to perform a higher resolution analysis in which genes may be counted several times, dependent on the number of candidate SNPs found in a gene (`--mode snp`). For example a gene containing 5 candidate SNPs is counted 5 times. This is of course also true in the simulations, a gene with 5 random SNPs will also be counted 5 times.
+As we are getting quite desperate and we know that linkage disequilibrium is decaying quite rapidly in our organism we want to perform a higher resolution analysis in which genes may be counted several times, dependent on the number of candidate SNPs (`--mode snp`). For example a gene containing 5 candidate SNPs is counted 5 times (with the simulations as well as with the candidate SNPs).
 
 {{{
 java -Xmx4g -jar <path-to-gowinda>/Gowinda.jar --snp-file total_snps.txt --candidate-snp-file cand_snps.txt --gene-set-file goassociations_cg.txt --annotation-file annotation.gtf --simulations 100000 --min-significance 1 --gene-definition updownstream2000 --threads 8 --output-file results_snp_2000ud.txt --mode snp --min-genes 1
@@ -81,7 +85,8 @@ GO:0016409      0.640   8       0.0000100000    0.0014018182    1       6       
 GO:0007349      4.461   16      0.0000100000    0.0014018182    8       24      91      cellularization cg9506,cg13263,cg14472,cg10728,cg8049,cg5020,cg17161,cg6137
 GO:0018345      0.464   8       0.0000100000    0.0014018182    1       5       22      protein palmitoylation  cg18810
 }}}
-Finally, with an FDR <0.05 we have found a significantly enriched GO categories. For example for the first GO term (GO:0006497) we find on the average only one candidate SNP, but in our analysis we found 8. Note that we have a significant enrichement for this category although candidate SNPs were only found for a single gene. This could be due to selection acting on a single SNP and the others hitch-hicking along. Therefore these results must be interpreted with caution. 
+Finally, we have found a significantly enriched GO categories with an FDR <0.05 . For example, for the first GO term (GO:0006497) we find on the average only one candidate SNP, but in our analysis we found 8. Note that we have a significant enrichment for this category although candidate SNPs were only found for a single gene. This could be due to selection acting on a single SNP and the others hitch-hicking along. Therefore results of this analysis mode must be interpreted with care.
+
 
 = Convet a `.gtf` file into a `.gff` =
 
@@ -101,10 +106,10 @@ The output should be similar to the following:
 2R      FlyBase exon    18681   18773   .       +       .       gene_id "FBgn0262115";
 }}}
 
-This converted annotation has the `FBgn` gene IDs whereas the GO association file has the `CG` gene IDs, therefore we need a different GO association file. Most conveniently such a GO association file can be directly obtained from !FuncAssociate2 (http://llama.mshri.on.ca/funcassociate/download_go_associations). However if many genes in the association file have an unmatched entry in the annotation, or vice versa, we recommend to obtain the GO association file from !GoMiner (see following tutorial):
+This converted annotation has the `FBgn` gene IDs whereas the GO association file has the `CG` gene IDs. It is thus necessary to obtain a different GO association file. Most conveniently such a GO association file can be directly obtained from !FuncAssociate2 (http://llama.mshri.on.ca/funcassociate/download_go_associations). However if many genes in the association file have an unmatched entry in the annotation, or vice versa, we recommend to obtain the GO association file from !GoMiner (see following tutorial):
 
 = Obtain a GO association file from !GoMiner =
-Usually we recommend to obtain a GO association file from !FuncAssociate2. However in some cases it may be advantagous to obtain this file from !GoMiner instead. We recommend to obtain an GO association from !GoMiner when you have many unmatched gene IDs between the annotation and the GO association file (the log of Gowinda contains information about the number of matching gene IDs). !GoMiner uses a database of synonymous gene IDs and this can be utilized to produce a GO association file suitable for Gowinda. However !GoMiner does not directly offer such a download, therefore we have to perform a query for GO term enrichment and subsequently extract the GO association file from the results.
+Usually we recommend to obtain a GO association file from !FuncAssociate2. However in some cases it may be advantageous to obtain this file from !GoMiner instead. We recommend to obtain an GO association from !GoMiner when you have many unmatched gene IDs, between the annotation and the GO association file (the log of Gowinda contains information about the number of matching gene IDs). !GoMiner uses a database of synonymous gene IDs and this can be utilized to produce a GO association file suitable for Gowinda. However, !GoMiner does not directly offer such a download, therefore we have to perform a query for GO term enrichment and subsequently extract the GO association file from the results.
 
 First we need a unique set of the gene IDs (using the `converted.gtf` file from the previous tutorial)
 {{{
